[project]
name = "beat-sabre-map-manager"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.27.6",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pyinstaller>=6.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
